# Iptables-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  main.py  rule.py  rules.c  rules.h  rules.py  ui.c  ui.h  utils.c  utils.h  utils.py
src/utils/: io.c  io.h  parsing.c  parsing.h
tests/: runtests.sh
